--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-prebuild": "npm install -g http-server",
-	"heroku-postbuild": "ng build --prod",
-	"start": "http-server dist/"
+    "heroku-postbuild": "ng build --prod",
+    "start": "http-server dist/"
   },
   "engines": {
     "node": "6.10.0",
@@ -36,6 +36,8 @@
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "http-server": "^0.9.0",
+    "ng2-fuse": "^0.1.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
     "zone.js": "^0.7.6"
